# sam-mcp-server

./: README.md  build_umg_from_json.py  claude_desktop_config.json  codex_prompt.md  mcp_server.py  pyproject.toml  ui_parser.py
tests/: test_ui_parser.py
