[project]
name = "sam-mcp-server"
version = "1.3.1"
description = "Segment Anything + EasyOCR 기반 UMG 자동 생성 Claude MCP 서버"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9,<3.12"

dependencies = [
  # 이미지 처리 및 AI
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "numpy>=1.24",
  "opencv-python>=4.9.0",
  "easyocr>=1.7.1",

  # Segment Anything
  "git+https://github.com/facebookresearch/segment-anything.git",

  # Claude MCP SDK
  "mcp>=1.0.0"
]

[project.scripts]
sam-mcp-server = "mcp_server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [{ include = "ui_parser.py" }, { include = "mcp_server.py" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# CUDA 버전 지정 시 예시 (주석 해제 후 환경에 맞게 사용)
# torch = {version = ">=2.1.0", source = "https://download.pytorch.org/whl/cu121"}
# torchvision = {version = ">=0.16.0", source = "https://download.pytorch.org/whl/cu121"}

[tool.poetry.scripts]
sam-mcp-server = "mcp_server:main"
